--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+    <!--<div class="header">-->
+        <header>
+        <h1>Horiseon</h1>
         <div>
             <ul>
                 <li>
@@ -23,7 +24,8 @@
                 </li>
             </ul>
         </div>
-    </div>
+        </header>
+    <!--</div>-->
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
