--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <section class="content"><!--This section element is a container for all the other subsections -->
        
-        <section id="search-engine-optimization" class="search-engine-optimization"><!--This section handles the card about search engine optimization which is the first card in the section-->
+        <section id="search-engine-optimization" class="card"><!--This section handles the card about search engine optimization which is the first card in the section-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                     <p>
@@ -41,7 +41,7 @@
                     </p>
         </section>
 
-        <section id="online-reputation-management" class="online-reputation-management"><!--This section holds the card about online reputation management, which is the second card in the section-->
+        <section id="online-reputation-management" class="card"><!--This section holds the card about online reputation management, which is the second card in the section-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
                 <h2>Online Reputation Management</h2>
                     <p>
@@ -50,7 +50,7 @@
                     </p>
         </section>
 
-        <section id="social-media-marketing" class="social-media-marketing"><!--This section holds the card about social media marketing which is the third and final card of this particular section-->
+        <section id="social-media-marketing" class="card"><!--This section holds the card about social media marketing which is the third and final card of this particular section-->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
                 <h2>Social Media Marketing</h2>
                     <p>
